fix svg color on safari

--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -37,6 +37,8 @@ main {
     text-indent: -4rem;
     writing-mode: vertical-rl;
     font-family: serif;
+    white-space: pre-wrap;
+    word-break: keep-all;
 
     &#name {
       align-self: flex-end;
@@ -51,7 +53,7 @@ footer {
 
   li {
     list-style: none;
-    margin: .75rem max(1rem, 2vw) 0 0;
+    margin: 0.75rem max(1rem, 2vw) 0 0;
 
     a {
       color: inherit;
@@ -75,6 +77,10 @@ footer {
         max-width: 2rem;
         filter: drop-shadow(0px 100px 0 var(--text-color));
         transform: translateY(-100px);
+      }
+
+      svg {
+        fill: var(--text-color);
       }
     }
   }
